# mini-Splunk-agent

./: .env.example  .gitignore  README.md  pyproject.toml
Agent/: config.py  main.py  sender.py  watcher.py
